# growth-analysis

./: README.md  pyproject.toml
moth_model/: main.py
