[tool.poetry]
name = "moth-model"
version = "0.1.0"
description = ""
authors = ["jdax <67487509+j-dax@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sympy = "^1.13.3"
numpy = "^2.1.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
